# java_bazel_starter

./: BUILD.bazel  HelloWorld.java  MODULE.bazel
.devcontainer/: devcontainer.json
java/com/: BUILD.bazel  HelloWorld.java
