"""A starter Java project using Bazel as the build system."""

module(name = "java_bazel_starter", version = "0.0.0")

bazel_dep(name = "rules_java", version = "7.12.2")
bazel_dep(name = "rules_jvm_external", version = "6.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "java_bazel_starter_maven",
    artifacts = [
    ],
    fetch_sources = True,
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "java_bazel_starter_maven")
